# actix-graphql-eager-loading

./: .gitignore  Cargo.toml  README.md  db.Dockerfile  docker-compose.yml
migrations/2020-10-09-064842_create_users/: up.sql
migrations/2020-10-09-065051_create_tags/: down.sql  up.sql
migrations/2020-10-09-065340_create_companies/: up.sql
migrations/2020-10-09-065350_create_employments/: down.sql  up.sql
src/: main.rs
src/db/: manager.rs  models.rs  repositories.rs
src/graphql/: schema.rs
