[package]
name = "graphql_eager_loading_sample"
version = "0.0.1"
authors = ["ebina4yaka <4yaka3bina@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "3.0.2"
actix-rt = "1.1.1"
dotenv = "0.15.0"
env_logger = "0.7.1"
juniper = "0.14.2"
juniper-from-schema = "0.5.1"
juniper-eager-loading = "0.5.0"
diesel = { version = "1.4.5", features = ["postgres", "r2d2", "chrono"] }
r2d2 = "0.8.9"
r2d2_postgres = "0.16.0"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.58"
itertools = "0.8.2"
chrono = "0.4.19"
futures = "0.3.6"
